# gaps

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.semaphore/: semaphore.yml
gaps/: callback.py  cli.py  core.py  crossover.py  evaluation.py  exception.py  fitness.py  genetic_algorithm.py  image_analysis.py  image_helpers.py  individual.py  piece.py  plot.py  progress_bar.py  selection.py  size_detector.py  utils.py
scripts/: create_puzzle
solver/: __init__.py  algorithm.py  cache.py  crossover.py  fitness.py  genetic_algorithm.py  helpers.py  image_analysis.py  image_helpers.py  individual.py  models.py  operators.py  piece.py  plot.py  progress_bar.py  selection.py
solver/operators/: __init__.py  crossover.py  select.py
tests/: test_core.py  test_size_detector.py  test_smoke.py
