[tool.poetry]
name = "gaps"
version = "0.1.0"
description = "Genetic Algorithm based solver for jigsaw puzzles with piece size auto-detection."
authors = ["Nemanja Milicevic <the.nemanja.milicevic@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nemanja-m/gaps"
repository = "https://github.com/nemanja-m/gaps"

  [tool.poetry.scripts]
  gaps = "gaps.cli:cli"

  [tool.poetry.dependencies]
  python = "^3.8"
  pillow = "^10.3.0"
  numpy = "1.24"
  matplotlib = "^3.7.2"
  opencv-python = "^4.8.0.74"
  click = "^8.1.6"

  [tool.poetry.group.dev.dependencies]
  pytest = "^7.4.0"
  ruff = "^0.0.282"
  black = "^24.3.0"
  mypy = "^1.4.1"
  pylint = "^2.17.5"

[tool.pytest.ini_options]
addopts = "-ra -v --disable-warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
